# GeoMultiCorr

./: .gitignore  GeoMultiCorr.code-workspace  README.md  __init__.py  pyproject.toml  qdmanips.ipynb
resources/map_styles/: vector-field_style_1.qml
src/: dataframe_tri_paires_0.csv  dataframe_tri_paires_1.csv  dataframe_tri_paires_2.csv  dataframe_zS_0.csv  geomorph.py  gmc_geomorph.py  gmc_pair.py  gmc_project.py  gmc_project_old.py  gmc_pzone.py  gmc_rib.py  gmc_spine.py  gmc_thumb.py  gmc_xzone.py  manips_ronan.ipynb  manips_ubaye.ipynb  manips_vanoise.ipynb  manips_vanoise_2.ipynb  pair.py  pzone.py  session.py  thumb.py  tri_paires_GRZ1_5.csv  tri_paires_GRZ1_6.csv  tri_paires_GRZ2_1.csv  tri_paires_GRZ2_2.csv  tri_paires_GRZ2_3.csv  tri_paires_GRZ3_1.csv
src/GeoMultiCorr/: gmc_geomorph.py  gmc_pair.py  gmc_pzone.py  gmc_session.py  gmc_spine.py  gmc_thumb.py  gmc_xzone.py
src/geomulticorr/: __init__.py  asp_functions.py  geomorph.py  gmc_functions.py  pair.py  pzone.py  session.py  spine.py  thumb.py  tio_functions.py  xzone.py
src/geomulticorr/resources/map_styles/: corr-eval_style.qml  vector-field_style_1.qml
src/geomulticorr/resources/project_template/: map_template-project.qgz
src/template-project/: map_template-project.qgz
template/: database.gpkg  see.qgz
tests/: create_ubaye_project_geomulticorr.html  data_for_testing.json  decorators.py  test_GMC_Session.py  test_Project.py  test_geomorph.py  test_pair.py  test_pzone.py  test_session.py  test_thumb.py
