[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "geomulticorr"
version = "0.0.1"
authors = [
  { name="Thibaut Duvanel", email="thibaut.duvanel@univ-smb.fr" },
]
description = "A python lib to study earth-surface displacements from optical images with Ames Stereo Pipeline"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]